src/assets/main.css
@import "./base.css";

#app {
  margin: 0 auto;
  padding: 2rem;
  font-weight: normal;
}

@media (min-width: 1024px) {
  body {
    place-items: top;
    width: 100%;
  }

  #app {
    padding: 0 0;
  }
}

main {
  margin-top: 7rem !important;
}

.card {
  --bs-card-spacer-y: 0.35rem;
  --bs-card-title-spacer-y: 0;
  --bs-card-spacer-x: 0;
  z-index: 0;
  max-height: 15rem;
  transition: transform 0.2s 0s ease-in-out, z-index 0s 100ms;
  -webkit-transition: transform 0.2s 0s ease-in-out, z-index 0s 100ms;
  -moz-transition: transform 0.2s 0s ease-in-out, z-index 0s 100ms;
  -o-transition: transform 0.2s 0s ease-in-out, z-index 0s 100ms;
  -ms-transition: transform 0.2s 0s ease-in-out, z-index 0s 100ms;
}

.home_carousel .carousel-inner img {
  object-fit: cover;
  height: 15rem;
}

.detail_carousel .carousel-inner img {
  object-fit: scale-down;
  max-height: 30rem;
}

.card:hover {
  transform: scale(1.25);
  z-index: 999;
  transition: transform 0.2s 0s ease-in-out, z-index 0s 0s;
  -webkit-transition: transform 0.2s 0s ease-in-out, z-index 0s 0s;
  -moz-transition: transform 0.2s 0s ease-in-out, z-index 0s 0s;
  -o-transition: transform 0.2s 0s ease-in-out, z-index 0s 0s;
  -ms-transition: transform 0.2s 0s ease-in-out, z-index 0s 0s;
}

.card:hover .carousel-inner img {
  object-fit: contain;
}

.card-title {
  text-align: center;
}

.carousel,
.badge,
.navbar-brand,
.custom-card-title,
.offcanvas {
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+ */
  user-select: none; /* Standard */
}

.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.5s ease-out;
  -webkit-transition: opacity 0.5s ease-out;
  -moz-transition: opacity 0.5s ease-out;
  -o-transition: opacity 0.5s ease-out;
  -ms-transition: opacity 0.5s ease-out;
}

.fade-enter-from,
.fade-leave-to {
  opacity: 0;
}

.offcanvas-header {
  padding-bottom: 0 !important;
}

.offcanvas-body {
  padding-top: 0 !important;
}

